src/objects/Garantia_Siniestro__c.object
<CustomObject>
    <fields>
        <fullName>GSIN_FOR_Descripcion_Garantia__c</fullName>
        <formula>GSIN_LKP_Garantia__r.GAR_TXT_Descripcion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descripción Garantía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSIN_LKP_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Siniestro al que se vincula la Garantía. Representa la FK al objeto Case. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External ID del objeto Case (Case.CAS_TXT_Identificador__c) para Siniestros: &quot;[Código de CIA]_[Nº de Siniestro HomeServe]&quot;</description>
        <label>Intervención</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Garantías Siniestro</relationshipLabel>
        <relationshipName>Garantias_Siniestro</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSIN_LKP_Confirmacion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo relación a confirmación</description>
        <label>Datos Apertura/Confirmación</label>
        <referenceTo>Confirmacion__c</referenceTo>
        <relationshipLabel>Garantías Siniestro</relationshipLabel>
        <relationshipName>Garantias_Siniestro</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSIN_LKP_Garantia__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Garantía que se vincula al Siniestro. Representa la FK al objeto Garantia__c. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External ID del objeto Garantia__c (Garantia__c.GAR_TXT_Codigo_Garantia__c): Código único de la Garantía.</description>
        <label>Garantía</label>
        <referenceTo>Garantia__c</referenceTo>
        <relationshipLabel>Garantías Siniestro</relationshipLabel>
        <relationshipName>Garantias_Siniestro</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Garantía Siniestro</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Garantías Siniestro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>